--- a/les-planetes.html
+++ b/les-planetes.html
@@ -1,75 +1,159 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="ceci est une age sur les planètes et leurs spécificités.">
+    <link rel="stylesheet" href="planete.css">
+    <link rel="shortcut icon" href="./ressources/logo.png" type="image/x-icon">
+    <title>Les planètes</title>
 </head>
 <body>
     <header>
-
-        <!-- Ce qui contient la navbar et le logo -->
-        <div>
-            <div>
-                <img src="" alt="">
-                <nav>
-                    <ul>
-                        <li><a href="">Mercure</a></li>
-                        <li><a href="">Vénus</a></li>
-                        <li><a href="">La Terre</a></li>
-                        <li><a href="">Mars</a></li>
-                        <li><a href="">Jupiter</a></li>
-                        <li><a href="">Saturne</a></li>
-                        <li><a href="">Uranus</a></li>
-                        <li><a href="">Neptune</a></li>
-                    </ul>
-                </nav>
+        <div class="content">
+            <img src="./ressources/logo.png" alt="logo de planètes">
+            <nav>
+                <ul>
+                    <li><a href="#mercure">Mercure</a></li>
+                    <li><a href="#vénus">Vénus</a></li>
+                    <li><a href="#terre">La terre</a></li>
+                    <li><a href="#mars">Mars</a></li>
+                    <li><a href="#jupiter">Jupiter</a></li>
+                    <li><a href="#saturne">Saturne</a></li>
+                    <li><a href="#uranus">Uranus</a></li>
+                    <li><a href="#neptune">Neptune</a></li>
+                </ul>
+            </nav>
+        </div>
+        <img class="entt" src="./ressources/image.jpg" alt="Image de l'en-tête">
+    </header>
+    <main>
+        <div class="main"> 
+            <div class="article">
+                <img src="./ressources/mercure.png" alt="">
+                <article class="rightblock">
+                    <h2 id="mercure">Mercure</h2>
+                    <div class="spe">
+                        <p class="tellurique">Tellurique</p>
+                        <p class="date">Antiquité</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolore facere dolorem possimus repellat numquam debitis maxime eum vel voluptates at beatae obcaecati modi, neque placeat explicabo corporis? Amet, suscipit!</p>
+                </article>
+            </div>
+            <div class="article">
+                <article class="leftblock">
+                    <h2 id="vénus">Vénus</h2>
+                    <div class="spe">
+                        <p class="tellurique">Tellurique</p>
+                        <p class="date">Antiquité</p>
+                    </div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum, natus facere? Deserunt eligendi corrupti harum quibusdam exercitationem! Autem unde et velit, iste consectetur veritatis delectus vitae pariatur nulla, praesentium deserunt?</p>
+                </article>
+                <img src="./ressources/venus.png" alt="">
+            </div>
+            <div class="article">
+                <img src="./ressources/la_terre.png" alt="">
+                <article class="rightblock">
+                    <h2 id="terre">La terre</h2>
+                    <div class="spe">
+                        <p class="tellurique">Tellurique</p>
+                        <p class="date">Antiquité</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dicta explicabo molestiae nesciunt, cum laudantium? Animi nisi nesciunt cum maiores explicabo sapiente est, quasi quos saepe, eveniet libero provident similique?</p>
+                </article>
+            </div>
+            <div class="article">
+                <article class="leftblock">
+                    <h2 id="mars">Mars</h2>
+                    <div class="spe">
+                        <p class="tellurique">Tellurique</p>
+                        <p class="date">Antiquité</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim sint delectus repellat itaque ut eum nemo repudiandae debitis voluptatum officiis! Voluptas provident recusandae tempora porro alias deleniti laboriosam sed exercitationem?
+                    Voluptates delectus rerum ad natus temporibus quidem nobis fugit aut sapiente, necessitatibus optio incidunt illo ex laborum architecto illum consectetur, esse, odio fuga quod officia voluptatum dolores? Eligendi, dolores eveniet?</p>
+                </article>
+                <img src="./ressources/mars.png" alt="">
+            </div>
+            <h3 class="hr">CEINTURE D'ASTEROÏDE</h3>
+            <div class="article">
+                <img src="./ressources/jupiter.png" alt="">
+                <article class="rightblock">
+                    <h2 id="jupiter">Jupiter</h2>
+                    <div class="spe">
+                        <p class="gaz">Tellurique</p>
+                        <p class="date">Antiquité</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eum voluptate facere, earum sequi expedita incidunt velit perferendis quia. Enim sit assumenda sint eos, vitae tempora ad ex cum quis?</p>
+                </article>
+            </div>
+            <div class="article">
+                <article class="leftblock">
+                    <h2 id="saturne">Saturne</h2>
+                    <div class="spe">
+                        <p class="gaz">Tellurique</p>
+                        <p class="date">Antiquité</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eum voluptate facere, earum sequi expedita incidunt velit perferendis quia. Enim sit assumenda sint eos, vitae tempora ad ex cum quis?</p>
+                </article>
+                <img src="./ressources/saturne.png" alt="">
+            </div>
+            <div class="article">
+                <img src="./ressources/uranus.png" alt="">
+                <article class="rightblock">
+                    <h2 id="uranus">Uranus</h2>
+                    <div class="spe">
+                        <p class="gaz">Tellurique</p>
+                        <p class="date">1781</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eum voluptate facere, earum sequi expedita incidunt velit perferendis quia. Enim sit assumenda sint eos, vitae tempora ad ex cum quis?</p>
+                </article>
+            </div>
+            <div class="article">
+                <article class="leftblock">
+                    <h2 id="neptune">Neptune</h2>
+                    <div class="spe">
+                        <p class="gaz">Tellurique</p>
+                        <p class="date">1846</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eum voluptate facere, earum sequi expedita incidunt velit perferendis quia. Enim sit assumenda sint eos, vitae tempora ad ex cum quis?</p>
+                </article>
+                <img src="./ressources/neptune.png" alt="">
             </div>
         </div>
-
-        <!-- Image de fond -->
-        <img src="" alt="">
-
-    </header>
-
-    <main>
-
-        <!-- Dupliquer la DIV 8 fois et adapter les contenus -->
-        <div>
-            <img src="" alt="">
-            <article>
-                <h2>Mercure</h2>
-                <div>
-                    <p>Téllurique</p>
-                    <p>Antiquité</p>
-                </div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur eius soluta cumque quos illo, earum vitae esse ducimus aliquid atque eaque minima quis provident delectus perferendis tempore corrupti. Eum, facilis?
-                    Non illum beatae est totam debitis magnam, labore ad alias molestiae itaque, eveniet molestias quidem consequuntur vel animi fugit ut dicta, ullam fugiat corrupti voluptatibus maiores voluptate eius nobis. Aliquam?
-                    Rerum aperiam modi optio. Quibusdam eveniet perferendis illo adipisci fugiat accusamus obcaecati possimus, amet veniam voluptas animi dolores esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus odio! Facilis, quidem?
-                    Itaque fugiat labore perspiciatis quam, amet eum dolores recusandae veritatis nulla, id consequuntur omnis cupiditate repellat, consequatur voluptatibus! Debitis animi aut facere rem ab quisquam sed suscipit mollitia iusto magni.
-                    Nobis accusamus facilis obcaecati quod. Eligendi est cum laudantium fugiat ab enim a eveniet, molestiae tempora doloribus, consequuntur non earum commodi nam atque numquam doloremque delectus repudiandae. Harum, obcaecati quisquam!
-                </p>
-            </article>
-        </div>
     </main>
-
     <footer>
-        <div>
-            <!-- Dupliquer 3 fois et adapter les contenus -->
-            <section>
-                <h2>Les Télluriques</h2>
+        <div class="content">
+            <div class="pdp">
+                <h2>Les télluriques</h2>
                 <ul>
-                    <li><a href="">Mercure</a></li>
-                    <li><a href="">Vénus</a></li>
-                    <li><a href="">La Terre</a></li>
-                    <li><a href="">Mars</a></li>
+                    <li>Mercure</li>
+                    <li>Vénus</li>
+                    <li>La Terre</li>
+                    <li>Mars</li>
                 </ul>
-            </section>
-            <p>Maquette réalisée dans un but pédagogique par M.PETIT Louis...</p>
+            </div>
+            <hr>
+            <div class="pdp">
+                <h2>Les Gazeuses</h2>
+                <ul>
+                    <li>Jupiter</li>
+                    <li>Saturne</li>
+                    <li>Uranus</li>
+                    <li>Neptune</li>
+                </ul>
+            </div>
+            <hr>
+            <div class="pdp">
+                <h2>Partenaires</h2>
+                <ul>
+                    <li>Ciel & Espace</li>
+                    <li>Le journal du ciel</li>
+                </ul>
+            </div>
         </div>
+        <hr class="last">
+        <p>Maquette réalisée dans un but pédagogique par</p>
+        <p>©M.PETIT Louis | M. VIGREUK Joël | M. MOY Yohann</p> 
     </footer>
-
 </body>
 </html>
